# f1-board

./: README.md  pyproject.toml
src/f1_board/: __init__.py
src/f1_board/meta/: tracks.json
