[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"


[project]
name = "f1-board"
version = "0.1.0"
dependencies = ["Pillow>=10.0.1,<12.0.0", "tzlocal"]


[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points.'bullpen.mlbled.plugin']
"f1" = "f1_board:load"

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.black]
line-length = 120
